--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,7 +122,7 @@ section#currentWork img#computer {
     height: 30vw;
     min-height: 300px;
 }
-section#currentWork img#CareCloud {
+section#currentWork img#Employer {
     max-width: 350px;
     width: 85vw;
     margin-bottom: 50px;
@@ -147,12 +147,12 @@ section#currentWork li h5 {
     margin-top: 10px;
 }
 
-section#currentWork ul#techList {
+/* section#currentWork ul#techList {
     margin-top: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     font-size: 18px;
-}
+} */
 @media only screen and (max-width: 1300px) {
     section#currentWork img#computer {
       display: none;
@@ -174,7 +174,7 @@ section#currentWork ul#techList {
     section#currentWork p {
         font-size: 14px;
     }
-    section#currentWork ul#techList {
+    section#currentWork ul.nestedList {
         font-size: 14px;
     }
 }
